--- a/ikinci.html
+++ b/ikinci.html
@@ -5,6 +5,6 @@
 <body>
 <p>Ýlk git projem</p>
 <p>2. commit</p>
-<p>Güncellemeler yeni branch</p>
+<p>Güncellemeler yeni branch-2</p>
 </body>
 </html>
